--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
   <title>Document</title>
   <style>
     .map {
-      width: 500px;
-      height: 500px;
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
     }
   </style>
 </head>
